# pyspark_snowflake_etl_pipeline

./: .gitignore  dockerfile  dockerignore  pyproject.toml  pyspark_job.yml  role.yml  rolebinding.yml  serviceaccount.yml
pyspark_redshift_etl_pipeline/: constant.py  extract.py  load_tables.py  main.py  models.py  transform.py  utils.py
